--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -22,11 +22,11 @@
                 android:id="@+id/profileImageView"
                 android:layout_width="224dp"
                 android:layout_height="200dp"
+                android:src="@drawable/perfil_sem_foto"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/perfil_sem_foto" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.github.clans.fab.FloatingActionMenu
                 android:layout_width="wrap_content"
@@ -274,51 +274,6 @@
 
             <TextView
                 android:id="@+id/validadeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="@string/traco"
-                android:textColor="@android:color/black" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="1° Habilitação: "
-                android:textColor="@android:color/darker_gray" />
-
-            <TextView
-                android:id="@+id/primeiraHabilitacaoTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="@string/traco"
-                android:textColor="@android:color/black" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="Local: "
-                android:textColor="@android:color/darker_gray" />
-
-            <TextView
-                android:id="@+id/localTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="@string/traco"
-                android:textColor="@android:color/black" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="Data Emissão: "
-                android:textColor="@android:color/darker_gray" />
-
-            <TextView
-                android:id="@+id/dataEmissaoTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
